# aero-f

./: .cproject  .fuse_hidden0000081900000097  .fuse_hidden000183fe00000096  .hgignore  AgglomeratedFace.C  AgglomeratedFace.h  BCApplier.C  BCApplier.h  BCApplierCore.C  BasicGeometry.C  BcData.h  BcDef.h  BcFcn.C  BcFcn.h  BcFcnCore.C  BinFileHandler.h  BlockAlloc.C  BlockAlloc.h  BlockTridiagonalMatrix.C  CMakeCache.txt  CMakeLists.txt  Communicator.C  Communicator.h  CommunicatorCore.C  CommunicatorMPI.C  Connectivity.h  ConnectivityCore.C  CorotSolver.C  CurvatureDetection.C  CurvatureDetection.h  DESTerm.h  DebugTools.h  DenseMatrix.C  DenseMatrix.h  DenseMatrixOps.h  DiagMatrix.C  DiagMatrix.h  DistBcData.C  DistBcData.h  DistDynamicLESTerm.C  (+407 more)
AlternatingLeastSquare/: als_io.cpp  als_lapack.cpp  als_lapack.h  als_util.cpp  als_util.h
AutoDiff/: Taylor.h
CMake/Modules/: CMakeTestFortran.f
Dev/: devtools.C
FSI/: CrackingSurface.cpp  CrackingSurface.h  DynamicNodalTransfer.cpp  DynamicNodalTransfer.h
Ghost/: DistEulerStructGhostFluid.C  DistEulerStructGhostFluid.h  DistEulerStructGhostFluidCore.C  EulerStructGhostFluid.h  EulerStructGhostFluidCore.C
IntersectorFRG/: CMakeLists.txt  IntersectorFRG.C  IntersectorFRG.h  PhysBAMIntersect.C  PhysBAMIntersect.h
IntersectorPhysBAM/: FloodFill.C  FloodFill.h  IntersectorPhysBAM.C  IntersectorPhysBAM.h  Mpi_Utilities.C  Mpi_Utilities.h
LevelSet/: FluidTypeCriterion.cpp  FluidTypeCriterion.h  IntersectionFactory.C  IntersectionFactory.h  LevelSetStructure.C  LevelSetStructure.h  MultiGridLevelSetStructure.C  MultiGridLevelSetStructure.h
Manual/: Aerof3d.html
PhysBAMIntersection/: CMakeLists.txt  PhysBAMIntersect.C  PhysBAMIntersect.h
PhysBAMIntersection/Geometry/: KDTree.h
PhysBAMIntersection_New/: PhysBAMIntersect.C  PhysBAMIntersect.h
PhysBAM_Interface/: CMakeLists.txt  LOCAL_LEVELSET.h  PHYSBAM_INTERFACE.cpp  PHYSBAM_INTERFACE.h
PhysBAM_Interface/Public_Library/PhysBAM_Geometry/Spatial_Acceleration/: BOX_HIERARCHY.cpp  TRIANGLE_HIERARCHY.cpp
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Arrays/: ARRAY.h  ARRAY_BASE.h  ARRAY_VIEW.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Data_Structures/: KD_TREE.cpp
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Math_Tools/: Hash.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Parsing/: STRING_UTILITIES.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Polynomials/: CUBIC.cpp  QUADRATIC.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Utilities/: TYPE_UTILITIES.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Vectors/: VECTOR_BASE.h
Project/: CMakeLists.txt
Solvers/: LevelSetSolver.h  LevelSetSolver5.C  NavierStokesCoupledSolver.h  NavierStokesEmbedded.h  NavierStokesEmbedded5.C  NavierStokesEmbedded6.C  NavierStokesEmbedded7.C  NavierStokesEmbeddedCoupledSolver.h  NavierStokesMultiPhysicsEmbedded.h  NavierStokesMultiPhysicsEmbedded5.C  NavierStokesSegSolver.h  Solvers.h  StructLevelSetSolver.h  StructLevelSetSolver5.C
arpack++/include/: arch.h  ardsmat.h  ardsnsym.h  arerror.h  arrseig.h  arrsnsym.h  arrssym.h  arsnsym.h
cmake_admin/: FindGSL.cmake
doc/: template.data
f77src/: Makefile  ballvertex.f  eriemann_gg.f  eriemann_gw.f  eriemann_ww.f  g_roeflux5.f  genbcfluxgas.f  genbcfluxgas_HH.f  genbcfluxtait.f  genbcfluxtait_HH.f  globalmatrices.f  gridinitialize.f  hllcflux.f  hllcflux1.f  hllcjac.f  hlleflux1.f  hllejac.f  leastsquares.f  lworksize.f  lworksizels.f  printmask.f  roeflux5.f  roeflux5prim.f  roeflux5waterdissprec.f  roeflux5waterdissprec_burnable.f  roeflux7.f  roejac2.f  roejac5.f  roejac5waterdissprec.f  roejac6.f  roejacwaterdissprim.f  tetrasprings.f  thinsvd.f  torsionspring.f
localconfig/: ahpcrc-login01_intel13sp1up1_openmpi-1.7.4-1  independence.stanford.edu-config.cmake  independence_intel13_openmpi161  kratos_intel13sp1up1_openmpi-1.7.4-1  kratos_intel2015_openmpi-1.8.2  su-ahpcrc.stanford.edu-config.cmake
parser/: Assigner.C  Assigner.h  AssignerCore.C  Dictionary.C  Dictionary.h  Lexer.l  Makefile  Parser.y
tools/: alloca.cougar.h  loader.C
utils/: Laguerre.C  Makefile  Predicate.C
