cmake_minimum_required(VERSION 2.6)
include(../base-exports.cmake)
set_property(TARGET FluidBase PROPERTY IMPORTED_LOCATION "../libFluidBase.a")
FIND_PATH(PHYSBAM_BASE PHYSBAM_INTERFACE.h PATHS ../../PhysBAMLight)
SET(INC_DIR .. . ${PHYSBAM_BASE})
INCLUDE_DIRECTORIES(${INC_DIR})
add_definitions(-DTEMPLATE_FIX -D__LINUX -DF_NEEDS_UNDSC -DTYPE_PREC=float)
add_library(PhysBAMIntersect SHARED PhysBAMIntersect.C)
TARGET_LINK_LIBRARIES(PhysBAMIntersect FluidBase -L${PHYSBAM_BASE} -lphysbam)
