cmake_minimum_required(VERSION 2.6)
FIND_PACKAGE(MPI)
include(../base-exports.cmake)
set_property(TARGET FluidBase PROPERTY IMPORTED_LOCATION "../libFluidBase.a")
FIND_PATH(PHYSBAM_BASE PHYSBAM_INTERFACE.h PATHS ../../PhysBAMLight)
SET(INC_DIR .. . ${PHYSBAM_BASE})
IF(MPI_FOUND)
  MESSAGE("Will compile with MPI at: " ${MPI_INCLUDE_PATH})
  SET(INC_DIR ${INC_DIR} ${MPI_INCLUDE_PATH})
  add_definitions(-DUSE_MPI -DMPICH_IGNORE_CXX_SEEK)
ENDIF(MPI_FOUND)
INCLUDE_DIRECTORIES(${INC_DIR})
add_definitions(-DTEMPLATE_FIX -D__LINUX -DF_NEEDS_UNDSC -DTYPE_PREC=float)
add_library(PhysBAMIntersect SHARED PhysBAMIntersect.C)
TARGET_LINK_LIBRARIES(PhysBAMIntersect FluidBase -L${PHYSBAM_BASE} -lphysbam)
